2009-12-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Highlight D & Java types from a global tags file.
 * src/highlighting.c, doc/geany.txt, doc/geany.html:
   Add debug message warning if recursive lexer_filetype is set.
 * src/highlighting.c, src/sciwrappers.c, src/sciwrappers.h:
   Remove duplicate sci_set_keywords(), make argument const.


2009-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, data/filetypes.cpp, data/filetypes.vala,
   data/filetypes.glsl, data/filetypes.cs, data/filetypes.c:
   Move C-like filetype properties into configuration files.
 * src/highlighting.c, data/filetypes.cpp, data/filetypes.cs,
   data/filetypes.c:
   Remove now unnecessary "styling_within_preprocessor" C style key.
 * src/highlighting.c, data/filetypes.cpp, data/filetypes.vala,
   data/filetypes.glsl, data/filetypes.cs:
   Use lexer_filetype=C configuration file key instead of duplicate
   styleset functions for C++, C#, GLSL, Vala.


2009-12-02  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Warn about not using BOM for configuration files (confuses GKeyFile
   parser, at least on my system).
 * src/filetypes.c:
   Add/improve debug messages for custom filetypes.


2009-11-30  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * data/latex.tags:
   Add a couple of further latex-beamer commands to list of LaTeX tags.


2009-11-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * plugins/filebrowser.c:
   Add an in-entry clear icon to the filebrowser plugin's filter
   entry (patch by Dominic Hopf, thanks).
 * src/prefs.c, src/ui_utils.c:
   Fix two compiler warnings about possibly uninitialised variables.


2009-11-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/main.c, src/main.h, src/plugins.c, src/plugindata.h,
   plugins/geanyfunctions.h:
   Add main_is_realized() to the plugin API.